--- a/configserver/src/main/resources/shared/feign-dev.yml
+++ b/configserver/src/main/resources/shared/feign-dev.yml
@@ -6,7 +6,9 @@ spring:
   thymeleaf:
     prefix: classpath:/static/
     suffix: .html
-    cache: false
+    mode: HTML5
+    encoding: UTF-8
+#    cache: false
 eureka:
   client:
     service-url:
